--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,13 @@ body {
   outline: 1px solid red;
 }
 
+.section .section-title {
+  color: var(--title-text-color);
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
 .list {
   list-style: none;
 }
@@ -159,9 +166,40 @@ body {
   color: var(--accent-color);
 }
 
+.auth-nav-item {
+  display: flex;
+  justify-content: center;
+}
+
+.auth-nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #757575;
+}
+
+.auth-nav-link:hover,
+.auth-nav-link:focus {
+  fill: var(--accent-color);
+}
+
+.header-nav-icon {
+  margin-right: 10px;
+}
+
 /* ----------------------------Герой---------------------------- */
 .hero {
   background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  margin: 0 auto;
   padding: 200px 0;
   text-align: center;
 }
@@ -199,14 +237,6 @@ body {
   background-color: #188ce8;
 }
 
-/* ----------------------------Секция---------------------------- */
-.section .section-title {
-  color: var(--title-text-color);
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 /* ----------------------------Преимущевства---------------------------- */
 
 .feature-content {
@@ -238,6 +268,16 @@ body {
 .feature .text {
   font-size: 14px;
   line-height: 1.71;
+}
+
+.feature-item-icon {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ----------------------------Чем мы занимаемся---------------------------- */
@@ -306,9 +346,92 @@ body {
 .command .text {
   line-height: 1.19;
   text-align: center;
+  margin-bottom: 16px;
+}
+
+.command-soc-list {
+  display: flex;
+  justify-content: center;
+}
+
+.command-soc-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.command-soc-item:last-child {
+  margin-right: 0;
+}
+
+.command-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+}
+
+.command-soc-link:hover,
+.command-soc-link:focus {
+  background-color: var(--accent-color);
+  fill: #ffffff;
+}
+/* -------------------------------Клиенты------------------------- */
+
+.clients {
+  padding-top: var(--typical-padding);
+  padding-bottom: var(--typical-padding);
+}
+
+.clients-title {
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+  justify-content: center;
+}
+
+.clients-item {
+  width: 170px;
+  height: 92px;
+  margin-right: 30px;
+}
+
+.clients-item:last-child {
+  margin-right: 0;
+}
+
+.clients-link {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border: 1px solid #afb1b8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  fill: var(--accent-color);
 }
 
 /* ----------------------------Подвал---------------------------- */
+.footer .container {
+  display: flex;
+}
+
+.footer-adress-container {
+  margin-right: 70px;
+}
+
 .footer-logo {
   color: #ffffff;
   font-family: Raleway, sans-serif;
@@ -355,6 +478,51 @@ body {
   margin-bottom: 9px;
 }
 
+.footer-soc-links {
+  padding-top: 12px;
+}
+
+.footer-soc-links-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-soc-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.footer-soc-item:last-child {
+  margin-right: 0;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #ffffff;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--accent-color);
+  fill: #ffffff;
+}
+
 /* ----------------------------Портфолио------------------------ */
 
 .portfolio {
@@ -386,6 +554,13 @@ body {
 .portfolio-link {
   text-decoration: none;
 }
+
+.portfolio-item:hover,
+.portfolio-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-title {
   font-size: 18px;
   line-height: 2;
@@ -416,6 +591,8 @@ body {
 .portfolio-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-description {
