--- a/css/styles.css
+++ b/css/styles.css
@@ -426,6 +426,7 @@ body {
 /* ----------------------------Подвал---------------------------- */
 .footer .container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-adress-container {
@@ -478,9 +479,6 @@ body {
   margin-bottom: 9px;
 }
 
-.footer-soc-links {
-  padding-top: 12px;
-}
 
 .footer-soc-links-title {
   font-weight: 700;
@@ -552,11 +550,12 @@ body {
 }
 
 .portfolio-link {
+  display: block;
   text-decoration: none;
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
